lox-tests/tests/field/get_on_nil.stderr
ERROR: Only class instances have properties
 --> 1:1
  |
1 | nil.foo; // expect runtime error: Only instances have properties.
  | ^-----^
